# LLMath

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
configs/: default.yaml
data/: .gitkeep
docs/: benchmarks.md  react-protocol.md  release.md
notebooks/: demo.ipynb
scripts/: build_index.py  evaluate.py  plot_benchmarks.py  run_benchmark.py  run_demo.py  train_lora.py
src/llmath/: __init__.py  config.py
src/llmath/agent/: __init__.py  math_agent.py  parser.py  react_agent.py  state.py
src/llmath/api/: __init__.py  gradio_app.py
src/llmath/evaluation/: __init__.py  baseline.py  comparison.py  theoremqa.py
src/llmath/inference/: __init__.py  deepseek.py  generation.py  model_loader.py
src/llmath/prompts/: __init__.py  builder.py  orchestrator.py  react_templates.py  templates.py
src/llmath/retrieval/: __init__.py  base.py  faiss_retriever.py  theorem_kb.py
src/llmath/scripts/: __init__.py  _runner.py  build_index.py  evaluate.py  plot_benchmarks.py  run_benchmark.py  run_demo.py  train_lora.py
src/llmath/tools/: __init__.py  base.py  registry.py  retrieval_tool.py  sympy_tools.py
src/llmath/training/: __init__.py  data.py  formatting.py  react_data.py  trainer.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agent_pipeline.py  test_react_agent.py
tests/unit/: __init__.py  test_config.py  test_formatting.py  test_prompt_builder.py  test_react_parser.py  test_react_state.py  test_retrieval_tool.py  test_sympy_tools.py
